force-app/main/default/objects/Cell__c.object
<CustomObject>
    <description>Parcel cell</description>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>Full</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParcelLocker__c</fullName>
        <label>Parcel Locker</label>
        <referenceTo>ParcelLocker__c</referenceTo>
        <relationshipLabel>Cells</relationshipLabel>
        <relationshipName>Cells</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pin__c</fullName>
        <description>This should be a unique number among all cells orders</description>
        <label>PIN</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Size of Cell</description>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Cell</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Cell Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cells</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>