force-app/main/default/objects/Cell__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <formula>CASE(TEXT(Size__c),
&quot;Small&quot;, 10,
&quot;Medium&quot;, 10,
&quot;Big&quot;, 14.6,
&quot;Large&quot;, 15.4,
&quot;Extra Large&quot;, 23.7,
&quot;Jumbo&quot;, 23.7,
&quot;Mega&quot;, 47.4,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Height (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>