force-app/main/default/objects/Cell__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-1</fullName>
            </value>
            <value>
                <fullName>A-2</fullName>
            </value>
            <value>
                <fullName>A-3</fullName>
            </value>
            <value>
                <fullName>A-4 (A-1)</fullName>
            </value>
            <value>
                <fullName>A-4 (A-2)</fullName>
            </value>
            <value>
                <fullName>A-4 (A-3)</fullName>
            </value>
            <value>
                <fullName>A-4 (B-1)</fullName>
            </value>
            <value>
                <fullName>A-4 (B-2)</fullName>
            </value>
            <value>
                <fullName>A-4 (B-3)</fullName>
            </value>
            <value>
                <fullName>A-5</fullName>
            </value>
            <value>
                <fullName>A-6</fullName>
            </value>
            <value>
                <fullName>B-1</fullName>
            </value>
            <value>
                <fullName>B-2</fullName>
            </value>
            <value>
                <fullName>B-3</fullName>
            </value>
            <value>
                <fullName>B-4 (A-1)</fullName>
            </value>
            <value>
                <fullName>B-4 (A-2)</fullName>
            </value>
            <value>
                <fullName>B-4 (A-3)</fullName>
            </value>
            <value>
                <fullName>B-4 (B-1)</fullName>
            </value>
            <value>
                <fullName>B-4 (B-2)</fullName>
            </value>
            <value>
                <fullName>B-4 (B-3)</fullName>
            </value>
            <value>
                <fullName>B-5</fullName>
            </value>
            <value>
                <fullName>B-6 (A-1)</fullName>
            </value>
            <value>
                <fullName>B-6 (A-2)</fullName>
            </value>
            <value>
                <fullName>B-6 (A-3)</fullName>
            </value>
            <value>
                <fullName>C-1</fullName>
            </value>
            <value>
                <fullName>C-2</fullName>
            </value>
            <value>
                <fullName>C-3</fullName>
            </value>
            <value>
                <fullName>C-4 (A-1)</fullName>
            </value>
            <value>
                <fullName>C-4 (A-2)</fullName>
            </value>
            <value>
                <fullName>C-4 (A-3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>