force-app/main/default/objects/Cell__c/fields/Row__c.field-meta.xml
<CustomField>
    <fullName>Row__c</fullName>
    <label>Row (0-5)</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>