force-app/main/default/objects/Cell__c/fields/Sub_Column__c.field-meta.xml
<CustomField>
    <fullName>Sub_Column__c</fullName>
    <label>Sub-Column (0-1)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>