force-app/main/default/objects/Cell__c/fields/Sub_Row__c.field-meta.xml
<CustomField>
    <fullName>Sub_Row__c</fullName>
    <label>Sub-Row (0-2)</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>