force-app/main/default/objects/Cell__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <formula>CASE(TEXT(Size__c),
&quot;Small&quot;, 16.4,
&quot;Medium&quot;, 33.2,
&quot;Big&quot;, 47.4,
&quot;Large&quot;, 47.4,
&quot;Extra Large&quot;, 47.4,
&quot;Jumbo&quot;, 47.4,
&quot;Mega&quot;, 47.4,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Width (cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>